--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         java: [ '17', '21', '25' ]
-        threads: ['1']
+        threads: ['1', '10']
     steps:
       - uses: actions/checkout@v4
 
