Adds benchmark environment as parameters to JMH report, constraints memory to be 2GB and updates documentation

--- a/build.gradle
+++ b/build.gradle
@@ -100,13 +100,25 @@ protobuf {
         }
     }
 }
-
 jmh {
+    def jmhThreads = project.hasProperty('jmh.threads') ? project.property('jmh.threads').toInteger() : 1
+    def toolchainLauncher = project.extensions.getByType(JavaToolchainService).launcherFor(java.toolchain)
+    def jmhMaxMemory = '2g'
+
     resultFormat = 'JSON'
     resultsFile = layout.buildDirectory.file('reports/jmh/results.json').get().asFile
     jmhVersion = '1.37'
     timeUnit = 'ns'
-    threads = project.hasProperty('jmh.threads') ? project.property('jmh.threads').toInteger() : 1
+    threads = jmhThreads
+    jvmArgs = ["-Xmx${jmhMaxMemory}", "-Xms${jmhMaxMemory}"]
+
+    benchmarkParameters = [
+        javaRuntime: objects.listProperty(String).value([toolchainLauncher.map { l -> l.metadata.javaRuntimeVersion + " (" + l.metadata.vendor + ")" }.get()]),
+        os: objects.listProperty(String).value([System.getProperty("os.name") + "-" + System.getProperty("os.version") + " (" +  System.getProperty("os.arch") + ")"]),
+        processors: objects.listProperty(String).value([Runtime.getRuntime().availableProcessors().toString()]),
+        jvmMemory: objects.listProperty(String).value([jmhMaxMemory]),
+        jmhThreads: objects.listProperty(String).value([jmhThreads.toString()])
+    ]
 }
 
 tasks.named('jmhReport') {
