--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,9 @@ jmh {
     def toolchainLauncher = project.extensions.getByType(JavaToolchainService).launcherFor(java.toolchain)
     def jmhMaxMemory = '2g'
 
+
+
+
     resultFormat = 'JSON'
     resultsFile = layout.buildDirectory.file('reports/jmh/results.json').get().asFile
     jmhVersion = '1.37'
@@ -113,8 +116,11 @@ jmh {
     jvmArgs = ["-Xmx${jmhMaxMemory}", "-Xms${jmhMaxMemory}"]
 
     benchmarkParameters = [
-        javaRuntime: objects.listProperty(String).value([toolchainLauncher.map { l -> l.metadata.javaRuntimeVersion + " (" + l.metadata.vendor + ")" }.get()]),
-        os: objects.listProperty(String).value([System.getProperty("os.name") + "-" + System.getProperty("os.version") + " (" +  System.getProperty("os.arch") + ")"]),
+        javaRuntime: objects.listProperty(String).value([toolchainLauncher.map { l -> l.metadata.javaRuntimeVersion }.get().replaceAll(" ", "_")]),
+        javaVendor: objects.listProperty(String).value([toolchainLauncher.map { l ->  l.metadata.vendor }.get().replaceAll(" ", "_")]),
+        osName: objects.listProperty(String).value([System.getProperty("os.name").replaceAll(" ", "_")]),
+        osVersion: objects.listProperty(String).value([System.getProperty("os.version").replaceAll(" ", "_")]),
+        osArchitecture: objects.listProperty(String).value([System.getProperty("os.arch").replaceAll(" ", "_")]),
         processors: objects.listProperty(String).value([Runtime.getRuntime().availableProcessors().toString()]),
         jvmMemory: objects.listProperty(String).value([jmhMaxMemory]),
         jmhThreads: objects.listProperty(String).value([jmhThreads.toString()])
